static monster table cards no longer overlap, automatically builds grid

--- a/client/dm/src/app/components/monster-vault/monster-vault.component.css
+++ b/client/dm/src/app/components/monster-vault/monster-vault.component.css
@@ -5,21 +5,27 @@
     display:block;
 }
 
-#card{
-    border: 3px, groove, #333;
-}
-
 #modal-container {
     position:  fixed;
-    top: 10%;
-    max-width: 60%;
-    max-height: 80%;
+    top: 20%;
+    max-width: 70%;
     background: white;
     text-align: center;
     box-shadow: 0px 0px 2px 1px black;
     z-index: 100;
-
     left: 20%;
+}
+
+@media (min-width: 34em) {
+    #modal-container {
+        top: 15%;
+    }
+}
+
+@media (min-width: 48em) {
+    #modal-container {
+        top: 10%;
+    }
 }
 
 #monster-modal-overlay {
@@ -32,7 +38,13 @@
     height: 100%;
 }
 
-/* These are to display the monster cards */
+#monster-table{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+/* These are to display the monster cards *//*
 @media (min-width: 34em) {
     .card-columns {
         -webkit-column-count: 1;
@@ -63,4 +75,4 @@
         -moz-column-count: 4;
         column-count: 4;
     }
-}
+} */
